Fixed messages not populating on the first sign in, Added function to emit to the server when a project is selected, Hid the remaining amount when side menu is open, Changed chat placeholder to "Message Yedu", Addressed the change password button in the settings page being cut-off in mobile view, Addressed height on pricing page, Darkened body background color in dark mode, Changed the chat input background color to match the side bar in dark mode, Addressed card color in chat panel

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,7 @@
 
   /* Dark mode styles */
   .dark .dark-applied-body {
-    @apply bg-[#28282b80] text-yedu-white;
+    @apply bg-[#28282be6] text-yedu-white;
   }
 
   .dark .dark-applied {
@@ -45,7 +45,7 @@
   }
 
   .dark .textInput {
-    @apply bg-yedu-gray-text
+    @apply bg-[#28282B]
   }
   .dark .user-message {
     @apply text-yedu-white bg-yedu-dark
